assets/css/style.css
@font-face {
    font-family: Mostwasted;
    src: url(../fonts/Mostwasted.ttf);
}

html {
    max-width: 93%;
    margin: 0 auto;
}

body {
    background: black;
}

header {
    margin: 0 auto;
    text-align: center;
    background: url(../images/bannerbg.jpg);
    border: 1px groove rgb(212, 2, 2);
}

#title {
    color: rgb(0, 0, 0);
    text-shadow: 0 0 5px white, 0 0 19px rgb(255, 0, 0);
    padding-left: 30px;
    margin-top: 5px;
    margin-left: 40px;
    font-size: 90px;
    font-family: Mostwasted;
}

#streetText {
    color: rgb(212, 2, 2);
    text-shadow: 0 0 7px black, 0 0 19px rgb(255, 0, 0);
}

.container {
    max-width: 100%;
    margin-left: 35px;
}

#col1 {
    background: url(../images/bannerbg.jpg);    
    border: 1px groove rgb(212, 2, 2);
    margin-top: 25px;
    margin-right: 15px;
    min-height: 300px;
    max-height: 900px;    
}

iframe {
    border: 1px groove rgb(212, 2, 2);
    margin-top: 30px;
    margin-left: 15px;
    margin-right: 15px;
    width: 95%;
}

#searchLyrics {
    margin-top: 13px;
}

#term-input1 {
    margin-bottom: 5px;
}

.searchBar {
    background: black;
    border: 1px solid rgb(212, 2, 2);
    color: white;
}

.submitBTN {
    background: black;
    border: 1px solid rgb(212, 2, 2);
    color: white;
}

#clearDef {
    background: black;
    border: 1px solid rgb(212, 2, 2);
    color: rgb(212, 2, 2);
    margin-top: 5px;
    margin-bottom: 10px;
}

#def-box {
    color: white;
    margin-bottom: 5px;
    margin-left: 15px;
    margin-right: 15px;
    border-top: 1px groove rgb(212, 2, 2);
    padding-top: 15px;
    overflow-y: auto;
    height: 40%;
}

#col2 {
    background: url(../images/bannerbg.jpg);    
    border: 1px groove rgb(212, 2, 2);
    margin-top: 25px;
    min-height: 300px;
    max-height: 900px;
}

#lyrics, #songTitle, h1, h4, h6 {
    color: white;
    margin-top: 30px;
    margin-left: 15px;
    margin-right: 15px;
}

#lyrics {
    overflow-y: scroll;
    max-height: 675px;
}

footer {
    color: rgb(212, 2, 2);
    background: url(../images/bannerbg.jpg);
    border: 1px groove rgb(212, 2, 2); 
    margin-top: 30px;
    margin-bottom: 1px;  
    padding-top: 10px;
    padding-bottom: 10px;     
}

::-webkit-scrollbar {
    color: black;
}

